tests-integration/tests/roundtrip/invalid/semantic/domain_issue/01/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/domain_issue/01/input.essence:3:30:
  |
3 | such that forAll u,v : I . M[u] = M[v]
  |                              ^
Type error: u
	Expected: int
	Got: tuple

tests/roundtrip/invalid/semantic/domain_issue/01/input.essence:3:37:
  |
3 | such that forAll u,v : I . M[u] = M[v]
  |                                     ^
Type error: v
	Expected: int
	Got: tuple